--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,6 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mysql2": "^3.15.3"
+    "lucide-react": "^0.562.0",
+    "mysql2": "^3.15.3",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1"
   }
 }
